# atma15

./: .gitignore  pyproject.toml
exp/: 001_tutorial.py  002_preprocess.py  003_add_features.py  004_surprise.py  005_split_cv.py  006_new_anime_preprocess.py  007_w2v.py  008_mf_cf.py  009_make_sim_df.py  010_late_sub_v1.py  901_error_eda.py
src/atma15/: eda.py  model.py  utils.py
src/atma15/features/: features.py
