[tool.poetry]
name = "atma15"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lightgbm = "^4.0.0"
polars = "^0.18.7"
numpy = "^1.25.1"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
gensim = "^4.3.1"
scikit-learn = "^1.3.0"
ipykernel = "^6.24.0"
pyarrow = "^12.0.1"
implicit = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
